Initial sample with .less and .ts compilation is working.

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -15,6 +15,7 @@
 		"components/js_editor.ts",
 		"components/less_editor.ts",
 		"components/ts_editor.ts",
+		"services/less_service.ts",
 		"samples/simple_controller.ts"
 	]
 }
